@@ -2,6 +2,10 @@
 			A very simple session manager
 			by Thomas Leonard
 
+27-Feb-2003
+~~~~~~~~~~~
+French translation of AppInfo (Vincent Lefèvre).
+
 25-Feb-2003
 ~~~~~~~~~~~
 Added Russian translation (Alexey Lubimov).
